--- a/public_html/fotos.html
+++ b/public_html/fotos.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="_css/fotos.css" />
         <meta charset="utf-8" />
         <title>Tudo sobre Google Glass</title>
         <script src="_javascript/funcoes.js"></script>  <!-- Link do Arquivo de Funções JavaScript -->
@@ -32,14 +33,16 @@ Galeria de Imagens do Google Glass
 por Gustavo Guanabara
 Atualizado em 01/Maio/2013
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+<p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+<ul id="album-fotos">
+    <li id="foto-01"> <span>Agenda e lembretes</span></li>
+    <li id="foto-02"> <span>Sergey Brin usando o Glass</span></li>
+    <li id="foto-03"> <span>Leve e compacto</span></li>
+    <li id="foto-04"> <span>Sensação de uma tela de 50"</span></li>
+    <li id="foto-05"> <span>Vários tipos de lente</span></li>
+    <li id="foto-06"> <span>Informações importantes</span></li>
+</ul>
 
 <footer id="rodape">
                 <p>Copyright &copy; 2016 - by Gustavo Guanabara<br/>
